--- a/style.css
+++ b/style.css
@@ -20,12 +20,11 @@ a {
 
 .mobile-menu {
   overflow: hidden;
-  min-height: 100vh;
+  height: 100vh;
   min-width: 100vw;
   background-color: #252b46;
   opacity: .95;
   position: fixed;
-  top: 0;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: 0.5s -webkit-transform ease;
@@ -33,7 +32,7 @@ a {
   transition: 0.5s transform ease;
   transition: 0.5s transform ease, 0.5s -webkit-transform ease;
   z-index: 2;
-  padding: 2.5rem 2rem 0;
+  padding: 2.5rem 2rem;
 }
 
 .mobile-menu .mobile-menu-header {
