--- a/style.css
+++ b/style.css
@@ -24,7 +24,11 @@ a {
   min-width: 100vw;
   background-color: #252b46;
   opacity: .95;
+  top: 0;
+  bottom: 0;
   position: fixed;
+  overflow-y: scroll;
+  overflow-x: hidden;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: 0.5s -webkit-transform ease;
@@ -33,6 +37,13 @@ a {
   transition: 0.5s transform ease, 0.5s -webkit-transform ease;
   z-index: 2;
   padding: 2.5rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .mobile-menu .mobile-menu-header {
@@ -119,15 +130,15 @@ a {
 }
 
 .mobile-menu .mobile-social-logo-flex {
-  position: absolute;
-  bottom: 2.5rem;
+  position: relative;
+  -ms-flex-item-align: center;
+      align-self: center;
+  margin-top: auto;
+  padding-top: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 2rem;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
 }
 
 .mobile-menu .mobile-social-logo-flex .social-logo {
