--- a/style.scss
+++ b/style.scss
@@ -60,11 +60,17 @@ a {
     min-width: 100vw;
     background-color: $very-dark-blue;
     opacity: .95;
-    position: fixed;
+	top: 0;
+    bottom:0;
+    position:fixed;
+    overflow-y:scroll;
+    overflow-x:hidden;
     transform: translateX(100%);
     transition: 0.5s transform ease;
     z-index: 2;
 	padding: 2.5rem 2rem;
+	display: flex;
+	flex-direction: column;
     .mobile-menu-header {
         display: flex;
         align-items: center;
@@ -124,12 +130,12 @@ a {
         }
     }
     .mobile-social-logo-flex {
-        position: absolute;
-        bottom: 2.5rem;
+		position: relative;
+		align-self: center;
+		margin-top: auto;
+		padding-top: 1.5rem;
         display: flex;
         gap: 2rem;
-        left: 50%;
-        transform: translateX(-50%);
         .social-logo {
             cursor: pointer;
 			&:hover {
